Agregue animaciones al header y footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shorcut icon" href="./img/logo.jpg">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/animate.css">
     <title>UNIÓN AMERICANA</title>
 </head>
 <body>
@@ -73,7 +74,8 @@
     <footer class="footer">
         <div class="footer-container">
             <p>uamericana@gmail.com</p>
-            <ul class="redes">
+            <!-- DESPUES QUIERO VER COMO USAR BIEN WOW -->
+            <ul class="wow animate__bounceInUp redes">
                 <li>
                     <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
                         <i class="fa-brands fa-facebook fa-xl"></i>
@@ -94,5 +96,9 @@
             <p>Todos Los Derechos<br>  Reservados © 2022</p>
         </div>
     </footer>
+    <script src="js/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
 </body>
 </html>
