--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
     <link rel="shorcut icon" href="./img/logo.jpg">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
+    <!-- Description -->
+    <meta name="description" content="Club Union Americana es un club del barrio Fisherton que comparte hace con su gente hace más de 70 años">
+    <!-- Keywords -->
+    <meta name="keywords" content="Union Americana, rosario, club, fisherton"> 
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- CSS propio -->
     <link rel="stylesheet" href="css/animate.css">
-    <title>UNIÓN AMERICANA</title>
+    <title>UNIÓN AMERICANA | INICIO</title>
 </head>
 
 <body>
     <header class="header">
         <a href="./index.html">
-            <img src="./img/logo.jpg" alt="Logo" height="30px">
+            <img src="./img/logo.png" alt="Logo" height="30px">
         </a>
         <nav>
             <ul>
