--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../img/logo.jpg">
+    <!-- Description -->
+    <meta name="description" content="Información sobre nuestro club y donde nos podes encontrar">
+    <!-- Keywords -->
+    <meta name="keywords" content="Union Americana, ubicación, nosotros, rosario, historia, fisherton"> 
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- CSS propio -->
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
-    <title>UNIÓN AMERICANA</title>
+    <title>UNIÓN AMERICANA | NOSOTROS</title>
 </head>
 
 <body>
