--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../img/logo.jpg">
-        <!-- BOOTSTRAP -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    <!-- Description -->
+    <meta name="description" content="Enterate de todas los servicios que nuestro club ofrece a sus socios">
+    <!-- Keywords -->
+    <meta name="keywords" content="Union Americana, servicios, club, deportes, infraestrucura"> 
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <!-- CSS propio -->    
+    <!-- CSS propio -->    
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
-    <title>UNIÓN AMERICANA</title>
+    <title>UNIÓN AMERICANA | SERVICIOS</title>
 </head>
 <body>
     <header class="header">
@@ -41,7 +45,7 @@
     <main>
         <div class="servicio-container">
             <div class="servicios-titulo">
-                <h2>SERVICIOS</h2>
+                <h1>SERVICIOS</h1>
             </div>
             <div class="line"></div>
             <div class="servicios-imagenes">
@@ -71,7 +75,7 @@
                 </div>
             </div>
             <div class="servicios-titulo">
-                <h3>NUESTRAS INSTALACIONES</h3>
+                <h2>NUESTRAS INSTALACIONES</h2>
             </div>
             <div class="line"></div>
             <div class="servicios-imagenes">
