--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
     <!-- Description -->
-    <meta name="description" content="Club Union Americana es un club del barrio Fisherton que comparte hace con su gente hace más de 70 años">
+    <meta name="description" content="Club Union Americana es un club del barrio Fisherton que comparte hace con su gente hace más de 70 años.">
     <!-- Keywords -->
-    <meta name="keywords" content="Union Americana, rosario, club, fisherton"> 
+    <meta name="keywords" content="Union Americana, Rosario, club, Fisherton, deportes"> 
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="header">
         <a href="./index.html">
             <img src="./img/logo.png" alt="Logo" height="30px">
@@ -46,6 +47,7 @@
         </nav>
     </header>
     <main>
+        <!-- INICIO -->
         <div class="inicio">
             <h1>Club Social y Deportivo <br><span>UNIÓN AMERICANA</span></h1>
         </div>
@@ -55,6 +57,7 @@
                 Un club comprometido con su gente, su historia y sus deportes. Un club en donde la unión, la familia y
                 el amor son bases para seguir adelante y apuntar por un futuro mejor. </p>
         </div>
+        <!-- SERVICIOS -->
         <div class="servicios-container index">
             <div class="servicios-titulo">
                 <h2>SERVICIOS</h2>
@@ -149,6 +152,7 @@
             <p>Todos Los Derechos<br> Reservados © 2022</p>
         </div>
     </footer> -->
+    <!-- FOOTER -->
     <footer id="footer" class="footer">
         <div class="container">
             <div class="row footer-widgets">
