--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../img/logo.jpg">
     <!-- Description -->
-    <meta name="description" content="Completa el formulario para que podamos ponernos en contacto con vos">
+    <meta name="description" content="Completa el formulario para que podamos ponernos en contacto con vos lo antes posible.">
     <!-- Keywords -->
-    <meta name="keywords" content="Union Americana, contacto, atencion, ayuda"> 
+    <meta name="keywords" content="Union Americana, contacto, atencion, ayuda, duda"> 
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="header">
         <a href="../index.html">
             <img src="../img/logo.jpg" alt="Logo" height="30px">
@@ -45,6 +46,7 @@
         </nav>
     </header>
     <main>
+        <!-- FORMULARIO -->
         <div class="contacto-container">
             <div class="contacto-titulo">
                 <h1>¿TIENES ALGUNA DUDA? CONTÁCTANOS</h1>
@@ -91,6 +93,7 @@
                 </a>
             </div>
     </main>
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-container">
             <p>uamericana@gmail.com</p>
