--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../img/logo.jpg">
     <!-- Description -->
-    <meta name="description" content="Descubri todos los horarios de nuestras clases y deportes">
+    <meta name="description" content="Descubrí todos los horarios de nuestras clases y deportes.">
     <!-- Keywords -->
     <meta name="keywords" content="Union Americana, horarios, deportes, clases, disponibilidad"> 
     <!-- BOOTSTRAP -->
@@ -18,6 +18,7 @@
     <title>UNIÓN AMERICANA | HORARIOS</title>
 </head>
 <body>
+    <!-- HEADER -->
     <header class="header">
         <a href="../index.html">
             <img src="../img/logo.jpg" alt="Logo" height="30px">
@@ -43,6 +44,7 @@
         </nav>
     </header>
     <main>
+        <!-- HORARIOS -->
         <div class="horario-container">
             <h1>NUESTROS HORARIOS</h1>
             <div class="horario-cards">
@@ -186,11 +188,13 @@
             </div>
         </div>
     </main>
+    <!-- WHATSAPP -->
     <div class="wpp">
         <a href="https://wa.me/+543413664338" target="_blank">
             <img src="../img/wpp.png" alt="WhatsApp">
         </a>
     </div>
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-container">
             <p>uamericana@gmail.com</p>
