--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../img/logo.jpg">
     <!-- Description -->
-    <meta name="description" content="Información sobre nuestro club y donde nos podes encontrar">
+    <meta name="description" content="Información sobre nosotros, la historia del club y donde nos podes encontrar.">
     <!-- Keywords -->
-    <meta name="keywords" content="Union Americana, ubicación, nosotros, rosario, historia, fisherton"> 
+    <meta name="keywords" content="Union Americana, ubicación, nosotros, Rosario, historia, Fisherton"> 
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="header">
         <div class="sideBar"></div>
         <a href="../index.html">
@@ -46,6 +47,7 @@
         </nav>
     </header>
     <main>
+        <!-- NOSOTROS -->
         <div class="inicio-container">
             <h1>SOBRE NOSOTROS</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa earum, odio tempora sapiente illum ducimus
@@ -75,6 +77,7 @@
                 </article>
             </div>
         </div>
+        <!-- UBICACIÓN -->
         <div class="findus-container">
             <h2>ENCONTRANOS EN</h2>
             <!-- ¿Agrego un conocer sede? -->
@@ -94,6 +97,7 @@
                 </div>
             </div>
         </div>
+        <!-- HISTORIA -->
         <div class="story-container">
             <h3>NUESTRA HISTORIA</h3>
             <div class="story-video">
@@ -191,6 +195,7 @@
             </a>
         </div>
     </main>
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-container">
             <p>uamericana@gmail.com</p>
