--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../img/logo.jpg">
     <!-- Description -->
-    <meta name="description" content="Enterate de todas los servicios que nuestro club ofrece a sus socios">
+    <meta name="description" content="Enterate de todas las clases y servicios que nuestro club te puede ofrecer.">
     <!-- Keywords -->
     <meta name="keywords" content="Union Americana, servicios, club, deportes, infraestrucura"> 
     <!-- BOOTSTRAP -->
@@ -18,6 +18,7 @@
     <title>UNIÓN AMERICANA | SERVICIOS</title>
 </head>
 <body>
+    <!-- HEADER -->
     <header class="header">
         <a href="../index.html">
             <img src="../img/logo.jpg" alt="Logo" height="30px">
@@ -44,6 +45,7 @@
     </header>
     <main>
         <div class="servicio-container">
+            <!-- SERVICIOS -->
             <div class="servicios-titulo">
                 <h1>SERVICIOS</h1>
             </div>
@@ -74,6 +76,7 @@
                     <article><strong>FÚTSAL</strong><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque corporis quod ab architecto, sint excepturi. </article>
                 </div>
             </div>
+            <!-- INSTALACIONES -->
             <div class="servicios-titulo">
                 <h2>NUESTRAS INSTALACIONES</h2>
             </div>
@@ -103,8 +106,7 @@
                     <img src="../img/cancha.jpg" alt="PREDIO" >
                     <article><strong>PREDIO</strong><br><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima quibusdam labore, recusandae in eos quam.</article>
                 </div>
-            </div>
-            
+            </div>            
         </div>
     </main>
     <div class="wpp">
@@ -112,6 +114,7 @@
             <img src="../img/wpp.png" alt="WhatsApp">
         </a>
     </div>
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-container">
             <p>uamericana@gmail.com</p>
