--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="./img/logo.jpg">
-    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
     <!-- Description -->
     <meta name="description" content="Club Union Americana es un club del barrio Fisherton que comparte hace con su gente hace más de 70 años.">
@@ -16,14 +15,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- CSS propio -->
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>UNIÓN AMERICANA | INICIO</title>
 </head>
 
 <body>
     <!-- HEADER -->
     <header class="header">
-        <a href="./index.html">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <div class="sideBar"></div>
+                <a class="navbar-brand"><img src="./img/logo.png" alt="logo de la página"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./pages/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./pages/horarios.html">Horarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- <a href="./index.html">
             <img src="./img/logo.png" alt="Logo" height="30px">
         </a>
         <nav>
@@ -44,7 +72,7 @@
                     <a href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
     <main>
         <!-- INICIO -->
@@ -70,13 +98,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./img/pool2.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/pool2.jpg" class="d-block w-100" alt="Pileta climatizada y techada">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/esquina.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/esquina.jpg" class="d-block w-100" alt="Esquina con el nombre del club">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/cancha.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/cancha.jpg" class="d-block w-100" alt="Cancha de fútbol 11">
                             </div>
                         </div>
                     </div>
@@ -88,13 +116,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./img/team.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/team.jpg" class="d-block w-100" alt="Equipo de fútbol del Unión Americana">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/equipo3.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/equipo3.jpg" class="d-block w-100" alt="Equipo de fútbol del Unión Americana">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/futsal2.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/futsal2.jpg" class="d-block w-100" alt="Equipo de fútsal del Unión Americana">
                             </div>
                         </div>
                     </div>
@@ -106,13 +134,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./img/padel.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/padel.jpg" class="d-block w-100" alt="Cancha de padel">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/patin.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/patin.jpg" class="d-block w-100" alt="Niñas posando en un torneo de patín">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/futsal.jpeg" class="d-block w-100" alt="...">
+                                <img src="./img/futsal.jpeg" class="d-block w-100" alt="Partido de futsal de niños">
                             </div>
                         </div>
                     </div>
@@ -127,6 +155,57 @@
             </a>
         </div>
     </main>
+    <footer class="footer">
+        <div class="section1">
+            <h3 class="section1__mision">
+                Club Social y Deportivo <br><strong>UNIÓN AMERICANA</strong>
+            </h3>
+            <p class="section1__p">
+                <strong>Nuestra misión</strong><br>
+                Fomentar y desarrollar en nuestros socios deportistas y socios generales el deporte
+                competitivo, formativo y recreativo; promoviendo nuestros valores y la integración
+                entre nuestros miembros, siendo el pilar fundamental contener a nuestros jóvenes en
+                el seno de la Institución.
+            </p>
+        </div>
+        <div class="section2">
+            <div class="section2__h4">
+                <h4>REDES SOCIALES</h4>
+            </div>
+            <div class="section2__links">
+                <!-- QUIERO APRENDER WOW -->
+                <ul class="section2__redes"> 
+                    <li>
+                        <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
+                            <i class="fa-brands fa-facebook fa-xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/futsalunionamericana/?hl=es" target="_blank">
+                            <i class="fa-brands fa-instagram fa-xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/" target="_blank">
+                            <i class="fa-brands fa-twitter fa-xl"></i>
+                        </a>
+                    </li>
+                </ul>
+                <p>Sede: Chassaing 1650, Rosario, Santa Fe</p>
+                <p>Anexo Sebastian Figuerola (R), Muiño 9300, Rosario, Santa Fe</p>
+                <p>Administración: 4514948 (Lun. a Sab. de 9 a 21hs)</p>
+                <p>PileCA (natación): 451 2144</p>
+                <p>La cantina de fisherton te.0341-3908880</p>
+        <!--</ul>  
+            </div>
+            <div class="section2__info">
+
+            </div>
+        </div>
+        <div class="section3">
+            <span class="section3__copyright"></span>
+        </div>
+    </footer>
     <!-- <footer class="footer">
         <div class="footer-container">
             <p>uamericana@gmail.com</p> -->
@@ -153,126 +232,7 @@
         </div>
     </footer> -->
     <!-- FOOTER -->
-    <footer id="footer" class="footer">
-        <div class="container">
-            <div class="row footer-widgets">
-                <!-- footer widget about-->
-                <div class="col-sm-4 col-xs-12">
-                    <div class="footer-widget f-widget-about">
-                        <div class="col-sm-12">
-                            <div class="row">
-                                <p class="footer-logo">
-                                    <img src="./img/logo.jpg" alt="logo" class="logo">
-                                    Club Social y Deportivo UNIÓN AMERICANA
-                                </p>
-                                <p>
-                                    Nuestra misión
-                                    Fomentar y desarrollar en nuestros socios deportistas y socios generales el deporte
-                                    competitivo, formativo y recreativo; promoviendo nuestros valores y la integración
-                                    entre nuestros miembros, siendo el pilar fundamental contener a nuestros jóvenes en
-                                    el seno de la Institución.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- /.col-sm-4 -->
-                <!-- footer widget random posts-->
-                <!-- footer widget follow us-->
-                <div class="col-sm-4 col-xs-12">
-                    <div class="col-sm-12 footer-widget f-widget-follow">
-                        <div class="row">
-                            <h4 class="title">Social Media</h4>
-                            <ul>
-                                <!--Include social media links-->
-                                <!--if facebook url exists-->
-                                <li>
-                                    <a class="facebook" href="https://www.facebook.com/cafisherton/" target="_blank"><i
-                                            class="icon-facebook"></i></a>
-                                </li>
-                                <!--if twitter url exists-->
-                                <li>
-                                    <a class="twitter" href="twitter.com/CAF1915" target="_blank"><i
-                                            class="icon-twitter"></i></a>
-                                </li>
-                                <!--if pinterest url exists-->
-                                <!--if instagram url exists-->
-                                <li>
-                                    <a class="instagram" href="instagram.com/caf1915" target="_blank"><i
-                                            class="icon-instagram"></i></a>
-                                </li>
-                                <!--if linkedin url exists-->
-
-                                <!--if vk url exists-->
-
-                                <!--if telegram url exists-->
-
-                                <!--if youtube url exists-->
-                                <li>
-                                    <a class="youtube" href="https://www.youtube.com/channel/UCQlhE-3ZqZESRXLjcEQrGzQ"
-                                        target="_blank"><i class="icon-youtube"></i></a>
-                                </li>
-
-                                <!--if rss active-->
-                                <li>
-                                    <a class="rss" href="http://www.cafisherton.com/rss-feeds"><i class="icon-rss"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- newsletter -->
-                    <div class="col-sm-12">
-                        <div class="row">
-                            <div class="widget-newsletter">
-                                <p>Sede: Chassaing 1650, Rosario, Santa Fe</p>
-                                <p>Anexo Sebastian Figuerola (R), Muiño 9300, Rosario, Santa Fe</p>
-                                <p>Administración: 4514948 (Lun. a Sab. de 9 a 21hs)</p>
-                                <p>PileCAF (natación): 451 2144</p>
-                                <p>La cantina de fisherton te.0341-3908880</p>
-
-                                <div class="newsletter">
-                                    <div class="left">
-                                    </div>
-                                    <div class="right">
-                                    </div>
-                                </div>
-                                <p id="newsletter">
-                                </p>
-
-                            </div>
-                            <!-- /.news -->
-
-                        </div>
-                    </div>
-
-
-                </div>
-                <!-- .col-md-3 -->
-            </div>
-            <!-- .row -->
-
-            <!-- Copyright -->
-            <div class="footer-bottom">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="footer-bottom-left">
-                            <p>Copyright © 2020/22 CAF | Gustavo Marin Diseño | Arbórea</p>
-                        </div>
-
-                        <div class="footer-bottom-right">
-                            <ul class="nav-footer">
-                                <li>
-                                    <a href="http://www.cafisherton.com/terminoss-condiciones">Términos &amp;
-                                        Condiciones </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <!-- .row -->
-            </div>
-        </div>
-    </footer>
+    
     <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
@@ -283,3 +243,4 @@
 </body>
 
 </html>
+
