--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -20,6 +20,37 @@
 <body>
     <!-- HEADER -->
     <header class="header">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <div class="sideBar"></div>
+                <a class="navbar-brand"><img src="../img/logo.png" alt="logo de la página"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./horarios.html">Horarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- <header class="header">
         <a href="../index.html">
             <img src="../img/logo.jpg" alt="Logo" height="30px">
         </a>  
@@ -42,7 +73,7 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <main>
         <!-- HORARIOS -->
         <div class="horario-container">
