--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../img/logo.jpg">
+    <link rel="shorcut icon" href="../img/logo.png">
     <!-- Description -->
     <meta name="description" content="Completa el formulario para que podamos ponernos en contacto con vos lo antes posible.">
     <!-- Keywords -->
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <div class="sideBar"></div>
-                <a class="navbar-brand"><img src="../img/logo.png" alt="logo de la página"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,30 +52,6 @@
             </div>
         </nav>
     </header>
-    <!-- <header class="header">
-        <a href="../index.html">
-            <img src="../img/logo.jpg" alt="Logo" height="30px">
-        </a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="./servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="./horarios.html">Horarios</a>
-                </li>
-                <li>
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
-    </header> -->
     <main>
         <!-- FORMULARIO -->
         <div class="contacto-container">
@@ -126,27 +102,53 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="footer-container">
-            <p>uamericana@gmail.com</p>
-            <ul class="redes">
-                <li>
-                    <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/futsalunionamericana/?hl=es" target="_blank">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/" target="_blank">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                </li>
-                <!-- https://www.instagram.com/union.americana.natacion/ -->
-            </ul>
-            <p>Todos Los Derechos<br> Reservados © 2022</p>
+        <div class="section1">
+            <h3 class="section1__mision">
+                Club Social y Deportivo <br><strong>UNIÓN AMERICANA</strong>
+            </h3>
+            <p class="section1__p">
+                <strong>Nuestra misión</strong><br>
+                Fomentar y desarrollar en nuestros socios deportistas y socios generales el deporte
+                competitivo, formativo y recreativo; promoviendo nuestros valores y la integración
+                entre nuestros miembros, siendo el pilar fundamental contener a nuestros jóvenes en
+                el seno de la Institución.
+            </p>
+        </div>
+        <div class="section2">
+            <div class="section2__h4">
+                <h4>REDES SOCIALES</h4>
+            </div>
+            <div class="section2__links">
+                <!-- QUIERO APRENDER WOW -->
+                <ul class="section2__redes"> 
+                    <li>
+                        <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
+                            <i class="fa-brands fa-facebook fa-xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/futsalunionamericana/?hl=es" target="_blank">
+                            <i class="fa-brands fa-instagram fa-xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/" target="_blank">
+                            <i class="fa-brands fa-twitter fa-xl"></i>
+                        </a>
+                    </li>
+                </ul>
+                <p>Sede: Chassaing 1650, Rosario, Santa Fe</p>
+                <p>Anexo Sebastian Figuerola (R), Muiño 9300, Rosario, Santa Fe</p>
+                <p>Administración: 4514948 (Lun. a Sab. de 9 a 21hs)</p>
+                <p>PileCA (natación): 451 2144</p>
+                <p>Email: uamericana@gmail.com</p>  
+            </div>
+        </div>
+        <div class="section3">
+            <span class="section3__span">
+                <p class="section3__terminos">Términos y condiciones</p>
+                <p class="section3__copyright">Copyright © 2020/22 CA | Santamaria Manuel Diseños</p> 
+            </span>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
