--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../img/logo.jpg">
+    <link rel="shorcut icon" href="../img/logo.png">
     <!-- Description -->
     <meta name="description" content="Información sobre nosotros, la historia del club y donde nos podes encontrar.">
     <!-- Keywords -->
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <div class="sideBar"></div>
-                <a class="navbar-brand"><img src="../img/logo.png" alt="logo de la página"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,60 +52,40 @@
             </div>
         </nav>
     </header>
-    <!-- <header class="header">
-        <div class="sideBar"></div>
-        <a href="../index.html">
-            <img src="../img/logo.jpg" alt="Logo" height="30px">
-        </a>       
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="./servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="./horarios.html">Horarios</a>
-                </li>
-                <li>
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
-    </header> -->
     <main>
         <!-- NOSOTROS -->
         <div class="inicio-container">
             <h1>SOBRE NOSOTROS</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa earum, odio tempora sapiente illum ducimus
-                odit perferendis nostrum expedita atque reiciendis assumenda laborum accusantium reprehenderit mollitia
-                neque vel, quisquam dicta.</p>
-            <div class="inicio-card">
-                <article>
-                    <h3>COMPROMISO SOCIAL </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem culpa assumenda distinctio atque,
-                        quam nisi! Harum repellendus facere blanditiis quidem assumenda aliquid. Nobis esse hic harum
-                        quo veniam fuga ex.</p>
-                </article>
-                <div class="inicio-img uno">
-                    <img src="../img/mujeres.jpg" alt="Mujer">
+            <p>Un club comprometido con su gente, su historia y sus deportes. Un club en donde la unión, la familia y el amor son sus bases para seguir adelante y apuntar por un futuro mejor. </p>
+        </div>
+        <div class="valores">
+            <div class="valores__vision card mb-3">
+                <div class="row g-0">
+                    <div class="valores__box col-md-4">
+                        <img src="../img/mujeres.jpg" class="img-fluid rounded-start" alt="Sebastian Moreno y Micaela Angeles enseñando la nueva remera del club Union Americana">
+                    </div>
+                    <div class="valores__text col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">COMPROMISO SOCIAL</h5>
+                            <p class="card-text">Ser uno de los clubes lideres en la región. Generando absoluta confianza y calidad hacia nuestros
+                                socidos, como resultado del trabajo diario por ofrecer el mejor servicio.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <br><br>
-            <div class="inicio-card">
-                <div class="inicio-img dos">
-                    <img src="../img/futsal.jpeg" alt="futsal">
+            <div class="valores__principios card mb-3">
+                <div class="row g-0">
+                    <div class="valores__text col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">INSTALACIONES</h5>
+                            <p class="card-text">Contribuir en el bienestar de nuestros socios a través del entrenamiento y diversión,
+                                foraleciendo su salud física, mental y alentándolos en su propia superación.</p>
+                        </div>
+                    </div>
+                    <div class="valores__box col-md-4">
+                        <img src="../img/futsal.jpeg" class="img-fluid rounded-start" alt="Partido de futsal en una de las canchas del club">
+                    </div>
                 </div>
-                <article>
-                    <h3>INSTALACIONES</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem culpa assumenda distinctio atque,
-                        quam nisi! Harum repellendus facere blanditiis quidem assumenda aliquid. Nobis esse hic harum
-                        quo veniam fuga ex.</p>
-                </article>
             </div>
         </div>
         <!-- UBICACIÓN -->
@@ -114,7 +94,6 @@
             <!-- ¿Agrego un conocer sede? -->
             <div class="findus">
                 <div>
-                    <p></p>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6698.265155263136!2d-60.7342985!3d-32.9210953!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b652e633edd99d%3A0x8d631a296f261e42!2sClub%20Social%20Y%20Deportivo%20Union%20Americana!5e0!3m2!1ses!2sar!4v1658488691006!5m2!1ses!2sar"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -177,7 +156,7 @@
                 <!-- y estío, convocaban gran cantidad de público adulto e infantil de barrio Fisherton que como espectadores disfrutaban de la función sentados en las sillas de madera plegables colocadas a modo de platea en la cancha de basquet. Colección Fernando Rena -->
             </div>
             <p>
-                Toda una vida ligada al club
+                <strong>Toda una vida ligada al club</strong> 
                 <br><br>
                 El vínculo entre Miguel Aguilar y Unión Americana data de décadas. Al menos así lo certifica el propio
                 presidente. “Nací en este barrio y comencé a venir al club en el año 1957 cuando recién se estaba
@@ -195,7 +174,7 @@
                 sea”, confió el directivo antes señalar: “En 2001 ya me involucré de lleno por pedido de mi hermano
                 (Jorge) y llegué a la presidencia”.
                 <br><br>
-                El Flaco Menotti salió del club.
+                <strong>El Flaco Menotti salió del club.</strong> 
                 <br><br>
                 La historia marca que César Luis Menotti tiene un vínculo directo con el club. “El Flaco era del barrio
                 y venía a Unión Americana. Jugaba al fútbol y al básquet. También fue entrenador del equipo femenino de
@@ -228,27 +207,53 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="footer-container">
-            <p>uamericana@gmail.com</p>
-            <ul class="redes">
-                <li>
-                    <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/futsalunionamericana/?hl=es" target="_blank">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/" target="_blank">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                </li>
-                <!-- https://www.instagram.com/union.americana.natacion/ -->
-            </ul>
-            <p>Todos Los Derechos<br> Reservados © 2022</p>
+        <div class="section1">
+            <h3 class="section1__mision">
+                Club Social y Deportivo <br><strong>UNIÓN AMERICANA</strong>
+            </h3>
+            <p class="section1__p">
+                <strong>Nuestra misión</strong><br>
+                Fomentar y desarrollar en nuestros socios deportistas y socios generales el deporte
+                competitivo, formativo y recreativo; promoviendo nuestros valores y la integración
+                entre nuestros miembros, siendo el pilar fundamental contener a nuestros jóvenes en
+                el seno de la Institución.
+            </p>
+        </div>
+        <div class="section2">
+            <div class="section2__h4">
+                <h4>REDES SOCIALES</h4>
+            </div>
+            <div class="section2__links">
+                <!-- QUIERO APRENDER WOW -->
+                <ul class="section2__redes"> 
+                    <li>
+                        <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
+                            <i class="fa-brands fa-facebook fa-xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/futsalunionamericana/?hl=es" target="_blank">
+                            <i class="fa-brands fa-instagram fa-xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/" target="_blank">
+                            <i class="fa-brands fa-twitter fa-xl"></i>
+                        </a>
+                    </li>
+                </ul>
+                <p>Sede: Chassaing 1650, Rosario, Santa Fe</p>
+                <p>Anexo Sebastian Figuerola (R), Muiño 9300, Rosario, Santa Fe</p>
+                <p>Administración: 4514948 (Lun. a Sab. de 9 a 21hs)</p>
+                <p>PileCA (natación): 451 2144</p>
+                <p>Email: uamericana@gmail.com</p>  
+            </div>
+        </div>
+        <div class="section3">
+            <span class="section3__span">
+                <p class="section3__terminos">Términos y condiciones</p>
+                <p class="section3__copyright">Copyright © 2020/22 CA | Santamaria Manuel Diseños</p> 
+            </span>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
