--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../img/logo.jpg">
+    <link rel="shorcut icon" href="../img/logo.png">
     <!-- Description -->
     <meta name="description" content="Enterate de todas las clases y servicios que nuestro club te puede ofrecer.">
     <!-- Keywords -->
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <div class="sideBar"></div>
-                <a class="navbar-brand"><img src="../img/logo.png" alt="logo de la página"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -50,94 +50,160 @@
             </div>
         </nav>
     </header>
-    <!-- <header class="header">
-        <a href="../index.html">
-            <img src="../img/logo.jpg" alt="Logo" height="30px">
-        </a>  
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="./servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="./horarios.html">Horarios</a>
-                </li>
-                <li>
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
-    </header> -->
     <main>
-        <div class="servicio-container">
-            <!-- SERVICIOS -->
-            <div class="servicios-titulo">
-                <h1>SERVICIOS</h1>
+        <div class="inicio-container">
+            <h1>SERVICIOS</h1>            
+            <div class="servicios__line"></div>
+        </div>
+        <div class="servicios">
+            <!-- Quiero tres secciones con imagenes y que vayan pasando solas -->
+            <div class="servicios__imagenes">
+                <div class="servicios__card">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../img/patinaje.jpg" class="d-block w-100" alt="Niña aprendiendo a patinar">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../img/patin.jpg" class="d-block w-100" alt="Clase de natación">
+                            </div>
+                        </div>
+                    </div>
+                    <h4><strong>PATINAJES</strong></h4>
+                    <article>Aprendé patinaje artistico para todas las edades</article>
+                </div>
+                <div class="servicios__card">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../img/swimmingClass.jpg" class="d-block w-100"
+                                    alt="Equipo de fútbol del Unión Americana">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../img/pool.jpg" class="d-block w-100"
+                                    alt="Equipo de fútbol del Unión Americana">
+                            </div>
+                        </div>
+                    </div>
+                    <h4><strong>NATACIÓN</strong></h4>
+                    <article>Clases de natación y zumba acuatica!</article>
+                </div>
+                <div class="servicios__card">
+                    <div>
+                        <img src="../img/box.jpg" class="d-block w-100"
+                                    alt="Hombre golpeando a la bolsa de boxeo">
+                    </div>
+                    <h4><strong>BOXEO Y KICK BOXING</strong></h4>
+                    <article>Entrenamiento exhaustivo de boxeo y kick boxing ¡Unite a nosotros! </article>
+                </div>
+                <div class="servicios__card">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../img/chicasFutbol.jpg" class="d-block w-100"
+                                    alt="Equipo de fútbol femenino del Unión Americana">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../img/equipo3.jpg" class="d-block w-100"
+                                    alt="Equipo de fútbol del Unión Americana">
+                            </div>
+                        </div>
+                    </div>
+                    <h4><strong>FÚTBOL</strong></h4>
+                    <article>Torneo de fútbol para todas las edades y ambos géneros. ¡Sumate a
+                        nuestros equipo!</article>
+                </div>
+                <div class="servicios__card">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../img/padel.jpg" class="d-block w-100"
+                                    alt="Joven jugando al padel">
+                            </div>
+                        </div>
+                    </div>
+                    <h4><strong>PADEL</strong></h4>
+                    <article>Clases particulares y alquiler de canchas de padel para jugar con amigos y familiares</article>
+                </div>
+                <div class="servicios__card">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../img/futsal.jpeg" class="d-block w-100"
+                                    alt="Equipo de futsal del Unión Americana">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../img/futsal2.jpg" class="d-block w-100"
+                                    alt="Equipo de futsal del Unión Americana">
+                            </div>
+                        </div>
+                    </div>
+                    <h4><strong>FÚTSAL</strong></h4>
+                    <article>Torneo de fútsal para todas las edades. ¡Sumate a
+                        nuestro equipo!</article>
+                </div>
             </div>
-            <div class="line"></div>
-            <div class="servicios-imagenes">
-                <div>
-                    <img src="../img/patinaje.jpg" alt="Infraestrutura">
-                    <article><strong>PATINAJES</strong><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni suscipit officiis sit ipsam alias nemo!</article>
-                </div>
-                <div>
-                    <img src="../img/swimmingClass.jpg" alt="Equipo">
-                    <article><strong>NATACIÓN</strong><br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus tempore assumenda officia deserunt ipsam! Illo.</article>
-                </div>
-                <div>
-                    <img src="../img/box.jpg" alt="Deportes" >
-                    <article><strong>BOXEO Y KICK BOXING</strong><br><br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti cupiditate autem quia eos, saepe inventore!</article>
-                </div>
-                <div>
-                    <img src="../img/equipo3.jpg" alt="Infraestrutura">
-                    <article><strong>FÚTBOL</strong><br><br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, voluptatem voluptate iure delectus distinctio numquam.</article>
-                </div>
-                <div>
-                    <img src="../img/padel.jpg" alt="Equipo">
-                    <article><strong>PADEL</strong><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam saepe minima aperiam, quos nam commodi?</article>
-                </div>
-                <div>
-                    <img src="../img/futsal2.jpg" alt="Deportes" >
-                    <article><strong>FÚTSAL</strong><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque corporis quod ab architecto, sint excepturi. </article>
-                </div>
-            </div>
-            <!-- INSTALACIONES -->
-            <div class="servicios-titulo">
+            <div class="servicios__titulo">
                 <h2>NUESTRAS INSTALACIONES</h2>
             </div>
-            <div class="line"></div>
-            <div class="servicios-imagenes">
-                <div>
-                    <img src="../img/frente.jpeg" alt="SALONES DE USOS MULTIPLES">
-                    <article><strong>SALONES DE USOS MULTIPLES</strong><br><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci natus et ratione maxime aperiam. Fuga.</article>
+            <div class="servicios__line"></div>
+            <div class="servicios__imagenes">
+                <div class="servicios__card">
+                    <div>
+                        <img src="../img/frente.jpeg" class="d-block w-100" alt="Imagen del frente del club">
+                    </div>
+                    <h4><strong>SALONES DE USOS MULTIPLES</strong></h4>
+                    <article>Clases de zumba, strong, funcional y mucho más!</article>
                 </div>
-                <div>
-                    <img src="../img/pool2.jpg" alt="PILETA">
-                    <article><strong>PILETA</strong><br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt sed impedit ratione iusto autem minus?</article>
+                <div class="servicios__card">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../img/pool2.jpg" class="d-block w-100"
+                                    alt="Pileta del club Union Americana">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../img/pool.jpg" class="d-block w-100"
+                                    alt="Pileta del club Union Americana">
+                            </div>
+                        </div>
+                    </div>
+                    <h4><strong>PILETA</strong></h4>
+                    <article>Pileta climatizada los 365 días del año</article>
                 </div>
-                <div>
-                    <img src="../img/escenario.jpg" alt="ESCENARIO" >
-                    <article><strong>ESCENARIO</strong><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel enim consequatur tenetur! Voluptas, tempore optio. </article>
+                <div class="servicios__card">
+                    <div>
+                        <img src="../img/escenario.jpg" class="d-block w-100"
+                        alt="Escenario del club union americana">
+                    </div>
+                    <h4><strong>ESCENARIO</strong></h4>
+                    <article>Escenario disponible para eventos de todos los tipos</article>
                 </div>
-                <div>
-                    <img src="../img/restaurante.jpg" alt="RESTAURANTE">
-                    <article><strong>RESTAURANTE</strong><br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae minima illo aspernatur eius delectus atque.</article>
+                <div class="servicios__card">
+                    <div>
+                        <img src="../img/restaurante.jpg" class="d-block w-100"
+                                    alt="Equipo de fútbol del Unión Americana">
+                    </div>
+                    <h4><strong>RESTAURANTE</strong></h4>
+                    <article>El mejor restaurante del barrio, con comida casera y de la mmás alta calidad</article>
                 </div>
-                <div>
-                    <img src="../img/futsal.jpeg" alt="CANCHA DE FÚTSAL">
-                    <article><strong>CANCHA DE FÚTSAL</strong><br><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis facilis exercitationem id, eveniet inventore consectetur.</article>
+                <div class="servicios__card">
+                    <div>
+                        <img src="../img/futsal.jpeg" class="d-block w-100"
+                                    alt="Equipo de futsal del Unión Americana">
+                    </div>
+                    <h4><strong>CANCHA DE FÚTSAL</strong></h4>
+                    <article>Cancha para practicar para el torneo de futsal del que somos parte</article>
                 </div>
-                <div>
-                    <img src="../img/cancha.jpg" alt="PREDIO" >
-                    <article><strong>PREDIO</strong><br><br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima quibusdam labore, recusandae in eos quam.</article>
+                <div class="servicios__card">
+                    <div>
+                        <img src="../img/cancha.jpg" class="d-block w-100"
+                                    alt="Cancha de fútbol del Unión Americana">
+                    </div>
+                    <h4><strong>PREDIO</strong></h4>
+                    <article>Nuevo predio de futbol adquirido recientemente. 2 mil metros cuadrados para disfrutar y entrenar nuestro deporte principal</article>
                 </div>
-            </div>            
+            </div>
         </div>
     </main>
     <div class="wpp">
@@ -147,27 +213,53 @@
     </div>
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="footer-container">
-            <p>uamericana@gmail.com</p>
-            <ul class="redes">
-                <li>
-                    <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/futsalunionamericana/?hl=es" target="_blank">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/" target="_blank">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                </li>
-            <!-- https://www.instagram.com/union.americana.natacion/ -->
-            </ul>
-            <p>Todos Los Derechos<br>  Reservados © 2022</p>
+        <div class="section1">
+            <h3 class="section1__mision">
+                Club Social y Deportivo <br><strong>UNIÓN AMERICANA</strong>
+            </h3>
+            <p class="section1__p">
+                <strong>Nuestra misión</strong><br>
+                Fomentar y desarrollar en nuestros socios deportistas y socios generales el deporte
+                competitivo, formativo y recreativo; promoviendo nuestros valores y la integración
+                entre nuestros miembros, siendo el pilar fundamental contener a nuestros jóvenes en
+                el seno de la Institución.
+            </p>
+        </div>
+        <div class="section2">
+            <div class="section2__h4">
+                <h4>REDES SOCIALES</h4>
+            </div>
+            <div class="section2__links">
+                <!-- QUIERO APRENDER WOW -->
+                <ul class="section2__redes"> 
+                    <li>
+                        <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
+                            <i class="fa-brands fa-facebook fa-xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/futsalunionamericana/?hl=es" target="_blank">
+                            <i class="fa-brands fa-instagram fa-xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/" target="_blank">
+                            <i class="fa-brands fa-twitter fa-xl"></i>
+                        </a>
+                    </li>
+                </ul>
+                <p>Sede: Chassaing 1650, Rosario, Santa Fe</p>
+                <p>Anexo Sebastian Figuerola (R), Muiño 9300, Rosario, Santa Fe</p>
+                <p>Administración: 4514948 (Lun. a Sab. de 9 a 21hs)</p>
+                <p>PileCA (natación): 451 2144</p>
+                <p>Email: uamericana@gmail.com</p>  
+            </div>
+        </div>
+        <div class="section3">
+            <span class="section3__span">
+                <p class="section3__terminos">Términos y condiciones</p>
+                <p class="section3__copyright">Copyright © 2020/22 CA | Santamaria Manuel Diseños</p> 
+            </span>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
